@@ -127,6 +127,10 @@ double caml_gc_clock = 0.0;
 static unsigned long major_gc_counter = 0;
 #endif
 
+#ifdef NAKED_POINTERS_CHECKER
+int caml_naked_pointers_detected = 0;
+#endif
+
 void (*caml_major_gc_hook)(void) = NULL;
 
 /* This function prunes the mark stack if it's about to overflow. It does so
@@ -1163,6 +1167,7 @@ static void is_naked_pointer_safe (value v, value *p)
   if (Is_black_hd(h) && Wosize_hd(h) < (INT64_LITERAL(1) << 40))
     return;
 
+  caml_naked_pointers_detected = 1;
   if (!Is_black_hd(h)) {
     fprintf (stderr, "Out-of-heap pointer at %p of value %p has "
                      "non-black head (tag=%d)\n", p, (void*)v, t);
@@ -1175,6 +1180,7 @@ static void is_naked_pointer_safe (value v, value *p)
   return;
 
  on_segfault:
+  caml_naked_pointers_detected = 1;
   fprintf (stderr, "Out-of-heap pointer at %p of value %p. "
            "Cannot read head.\n", p, (void*)v);
 }
